--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -21,12 +21,38 @@ h3, h4 {
 }
 
 ul {
-    margin:0px;
-    padding: 0px;
+    margin:0em;
+    padding: 1em 0em;
     list-style-type: none;
 
     > li {
-        margin: 0.25em 0em;
+        position: relative;
+        display: block;
+        margin: 0em;
+        margin-top: 1em;
+
+        &:first-child {
+            margin-top: 0em;
+        }
+    }
+}
+
+ul.horizontal {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    > li {
+        margin: 0.5em;
+        margin-top: 0.5em;
+    
+        &:first-child {
+            margin-top: 0.5em;
+        }
+    
+        & > span {
+            @extend .label;
+        }
     }
 }
 
@@ -111,6 +137,21 @@ article.page {
     button.minor {
         @extend .heartsteps-minor-button;
     }
+
+    button.inline {
+        @extend .heartsteps-minor-button;
+        text-align: left;
+        padding: 0em;
+    }
+}
+
+.page ul > li > button {
+    @extend .heartsteps-minor-button;
+    display: flex;
+    color: $text-color;
+    flex-direction: row;
+    text-align: left;
+    padding: 0em;
 }
 
 .page button.bottom,
@@ -119,11 +160,6 @@ button.bottom,
 article > button {
     @extend .heartsteps-minor-button;
     border-top: $color-gray-light 1px solid;
-}
-
-li > button {
-    @extend button.inline;
-    color: $text-color;
 }
 
 .error {
@@ -174,19 +210,5 @@ ul.nav {
         mask-image: url('../assets/arrow-forward.svg');
         mask-repeat: no-repeat;
         mask-position: 50% 50%;
-    }
-}
-
-ul.horizontal {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-ul.horizontal li {
-    display: block;
-    padding: $space-size/2;
-    & > span {
-        @extend .label;
     }
 }
