Override ion-content padding to correctly pad stepper component

--- a/client/src/infrastructure/components/stepper.component.scss
+++ b/client/src/infrastructure/components/stepper.component.scss
@@ -5,6 +5,7 @@ heartsteps-stepper {
     background-color: $color-white;
 
     > header {
+        @extend .heartsteps-page-header;
         background-color: transparent;
         border-bottom: 0px;
     }
