--- a/client/src/infrastructure/dialogs/modal-dialog.component.html
+++ b/client/src/infrastructure/dialogs/modal-dialog.component.html
@@ -3,7 +3,7 @@
         <h2>{{title}}</h2>
         <button class="back" (click)="dismiss()">Back</button>
     </header>
-    <ion-content padding>
+    <ion-content>
         <ng-content></ng-content>
     </ion-content>
 </article>
