--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<page-home *ngIf="showDashboard"></page-home>
+<div class="pages">
+    <router-outlet></router-outlet>
+</div>
