--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -4,3 +4,12 @@
 @import 'theme/logo.scss';
 @import 'theme/start-screen.scss';
 @import 'theme/ionic.scss';
+
+.app-root > .pages > * {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+}
+
