--- a/client/src/heartsteps/daily-summaries/daily-activities-update.scss
+++ b/client/src/heartsteps/daily-summaries/daily-activities-update.scss
@@ -15,7 +15,7 @@ heartsteps-activity-daily-update {
         display: inline-block;
         width: 1em;
         height: 1em;
-        mask-image: url('/assets/refresh.svg');
+        mask-image: url('../assets/refresh.svg');
         mask-repeat: no-repeat;
         background-color: $link-color;
     }
