--- a/client/src/heartsteps/activity-types/activity-type.scss
+++ b/client/src/heartsteps/activity-types/activity-type.scss
@@ -23,6 +23,7 @@
         margin: 0em;
         margin-right: 0.5em;
         background-color: $text-color;
+        mask-image: url('../assets/activity-default.svg');
         mask-repeat: no-repeat;
         mask-position: 50% 50%;
     }
@@ -32,33 +33,31 @@
     }
 
     &.activity-type-swim:before {
-        mask-image: url('../assets/swim.svg');
+        mask-image: url('../assets/activity-swim.svg');
     }
 
     &.activity-type-run:before {
-        mask-image: url('../assets/walk.svg');
+        mask-image: url('../assets/activity-run.svg');
     }
 
     &.activity-type-walk:before {
-        mask-image: url('../assets/walk.svg');
+        mask-image: url('../assets/activity-walk.svg');
     }
 
     &.activity-type-weights:before {
-        mask-image: url('../assets/weights.svg');
+        mask-image: url('../assets/activity-weights.svg');
     }
 
     &.activity-type-bike:before {
-        mask-image: url('../assets/bike.svg');
+        mask-image: url('../assets/activity-bike.svg');
     }
 }
 
 button.activity-type {
     @extend .heartsteps-minor-button;
     @extend .activity-type;
-    // display: flex !important;
-    // color: $text-color !important;
 
     &:focus {
-        color: $color-primary !important;
+        color: $color-primary;
     }
 }
