--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -6,11 +6,16 @@
 @import 'theme/ionic.scss';
 
 .app-root > .pages > * {
+    display: flex;
     position: absolute;
     top: 0px;
     left: 0px;
     width: 100%;
     height: 100%;
     z-index: 10;
+}
+
+.app-root > .pages > router-outlet {
+    display:none;
 }
 
