--- a/client/src/infrastructure/form/select-field.component.html
+++ b/client/src/infrastructure/form/select-field.component.html
@@ -6,7 +6,7 @@
             (focus)="isFocused()"
             (blur)="isBlurred()"
             >
-            {{value}}
+            {{displayValue}}
         </button>
     </div>
     
