Add clickable button to complete plan

--- a/client/src/pages/activity-plan/plan.component.html
+++ b/client/src/pages/activity-plan/plan.component.html
@@ -4,3 +4,11 @@
     <dd *ngIf="complete">{{duration}} min complete</dd>
     <dd *ngIf="!complete">{{duration}} min planned</dd>
 </dl>
+<button *ngIf="complete"
+    >
+    Mark Incomplete
+</button>
+<button *ngIf="!complete"
+    >
+    Complete plan
+</button>
