--- a/client/src/infrastructure/components/page.component.scss
+++ b/client/src/infrastructure/components/page.component.scss
@@ -2,3 +2,8 @@ app-page {
     @extend .heartsteps-container;
     @extend .heartsteps-page;
 }
+
+ion-content .scroll-content {
+    @extend .heartsteps-container;
+}
+
