--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -40,7 +40,7 @@ ul {
 ul.horizontal {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
 
     > li {
         margin: 0.5em;
