--- a/client/src/heartsteps/activity-logs/activity-enjoyed-field.component.scss
+++ b/client/src/heartsteps/activity-logs/activity-enjoyed-field.component.scss
@@ -33,6 +33,10 @@ activity-enjoyed-field {
             opacity: 0.7;
         }
 
+        &#activity-enjoyed-0 {
+            mask-image: url('../assets/enjoyed-none.svg');
+        }
+
         &#activity-enjoyed-1 {
             mask-image: url('../assets/enjoyed-little.svg');
         }
