--- a/client/src/pages/activity-plan/activity-plan-field.component.html
+++ b/client/src/pages/activity-plan/activity-plan-field.component.html
@@ -9,11 +9,12 @@
         label="Intensity"
         >
     </heartsteps-activity-intensity-field>
-    <app-duration-field 
+    <app-increment-field 
         formControlName="duration"
         label="Duration"
+        unit="min"
         >
-    </app-duration-field>
+    </app-increment-field>
     <app-date-field
         formControlName="date"
         label="Date"
