Incrementer gets disabled

--- a/client/src/infrastructure/form/increment-field.component.scss
+++ b/client/src/infrastructure/form/increment-field.component.scss
@@ -52,3 +52,7 @@ app-increment-field .incrementer {
         order: -1;
     }
 }
+
+app-increment-field.is-disabled .incrementer > button {
+    display: none;
+}
