Add time of day field to activity plan

--- a/client/src/pages/activity-plan/activity-plan-field.component.html
+++ b/client/src/pages/activity-plan/activity-plan-field.component.html
@@ -20,9 +20,9 @@
         label="Date"
         >
     </app-date-field>
-    <app-time-field
-        formControlName="time"
-        label="Time"
+    <app-choice-field
+        formControlName="timeOfDay"
+        label="Time of day"
         >
-    </app-time-field>
+    </app-choice-field>
 </fieldset>
