Add available days to dates

--- a/client/src/pages/activity-plan/activity-plan-field.component.html
+++ b/client/src/pages/activity-plan/activity-plan-field.component.html
@@ -18,6 +18,7 @@
     <app-date-field
         formControlName="date"
         label="Date"
+        [available-dates]="availableDates"
         >
     </app-date-field>
     <app-choice-field
