--- a/client/src/heartsteps/weekly-survey/weekly-goal.component.html
+++ b/client/src/heartsteps/weekly-survey/weekly-goal.component.html
@@ -1,20 +1,19 @@
-<form>
-    <div>
-        <label>Suggested goal</label>
-        <app-increment-field
-        [(ngModel)]="minutes"
-        name="goal"
-        ></app-increment-field>
-    </div>
-
+<app-form *ngIf="form"
+    [formGroup]="form"
+    [submitLabel]="cta"
+    (onSubmit)="save()"
+    >
+    <app-increment-field
+        formControlName="minutes"
+        label="Suggested goal"
+        >
+    </app-increment-field>
     <div>
         Insert Weekly charts
     </div>
-    <div>
-        <label>How confident are you that you can achieve next week's goal?</label>
-        <app-range-field [(ngModel)]="confidence" name="confidence"></app-range-field>
-    </div>
-    <div class="controls">
-        <button (click)="save()">{{cta}}</button>
-    </div>
-</form>
+    <app-range-field
+        formControlName="confidence"
+        label="How confident are you that you'll reach your goal"
+        >
+    </app-range-field>
+</app-form>
