Refactor weekly-survey to work with new weekly-reflection notification

--- a/client/src/heartsteps/weekly-survey/weekly-goal.component.html
+++ b/client/src/heartsteps/weekly-survey/weekly-goal.component.html
@@ -1,6 +1,7 @@
 <app-form *ngIf="form"
     [formGroup]="form"
     [submitLabel]="cta"
+    [error]="error"
     (onSubmit)="save()"
     >
     <app-increment-field
