--- a/client/src/pages/activity-plan/activity-plan-field.component.html
+++ b/client/src/pages/activity-plan/activity-plan-field.component.html
@@ -23,6 +23,7 @@
     </app-date-field>
     <app-choice-field
         formControlName="timeOfDay"
+        [options]="dailyTimes"
         label="Time of day"
         >
     </app-choice-field>
