--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -152,6 +152,11 @@ article.page {
     flex-direction: row;
     text-align: left;
     padding: 0em;
+
+    &:hover,
+    &:focus {
+        color: $color-primary;
+    }
 }
 
 .page button.bottom,
