Revert "Make intensity field checkbox, not radio"
This reverts commit f96b24429e4ad7c5a2cb6a193885d4d0a4c7aa09.

--- a/client/src/heartsteps/activity-types/activity-intensity-field.component.html
+++ b/client/src/heartsteps/activity-types/activity-intensity-field.component.html
@@ -1,14 +1,33 @@
-<div class="input-checkbox">
-    <input id="activity-intensity-vigorous"
-        type="checkbox"
-        name="vigorous"
-        [ngModel]="isVigorous"
-        (ngModelChange)="update($event)"
-        [value]="true"
-        [disabled]="isDisabled"
-        />
-    <label for="activity-intensity-vigorous">
-        Vigorous
-        <span>2x time credit</span>
-    </label>
-</div>
+<fieldset class="intensity input-group">
+    <legend>{{label}}</legend>
+    <ul>
+        <li>
+            <input id="activity-intensity-moderate"
+                type="radio"
+                name="vigorous"
+                [ngModel]="isVigorous"
+                (ngModelChange)="update($event)"
+                [value]="false"
+                [disabled]="isDisabled"
+                />
+            <label for="activity-intensity-moderate">
+                Moderate
+                <span>1x time credit</span>
+            </label>
+        </li>
+        <li>
+            <input id="activity-intensity-vigorous"
+                type="radio"
+                name="vigorous"
+                [ngModel]="isVigorous"
+                (ngModelChange)="update($event)"
+                [value]="true"
+                [disabled]="isDisabled"
+                />
+            <label for="activity-intensity-vigorous">
+                Vigorous
+                <span>2x time credit</span>
+            </label>
+        </li>
+    </ul>
+</fieldset>
