Tweak field layouts

--- a/client/src/heartsteps/activity-types/activity-type-field.component.html
+++ b/client/src/heartsteps/activity-types/activity-type-field.component.html
@@ -1,4 +1,4 @@
-<fieldset class="heartsteps-form-field">
+<fieldset class="input-group">
     <legend>{{label}}</legend>
     <p *ngIf="error && isInvalid"
         class="error"
