--- a/client/src/infrastructure/components/page.component.html
+++ b/client/src/infrastructure/components/page.component.html
@@ -1,15 +1,15 @@
 <article class="page">
     <header>
         <h2>{{title}}</h2>
-        <button *ngIf="dismissible"
+        <a *ngIf="dismissible"
             class="back"
             (click)="dismiss()"
             >
             {{dismissText}}
-        </button>
+        </a>
+        <ng-content select="[app-page-control]"></ng-content>
     </header>
     <ion-content>
         <ng-content></ng-content>
-        <ng-content select="[app-page-controls]"></ng-content>
     </ion-content>
 </article>
