Add home page as normal route, not page component

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,4 +1,6 @@
-<page-home *ngIf="showDashboard"></page-home>
 <div class="pages">
     <router-outlet></router-outlet>
+</div>
+<div class="modals">
+    <router-outlet name="modal"></router-outlet>
 </div>
