--- a/client/src/pages/activity-plan/plan.component.html
+++ b/client/src/pages/activity-plan/plan.component.html
@@ -1,8 +1,6 @@
 <dl>
     <dd>{{activityType}}, {{activityLevel}}</dd>
-    <dd>{{timeOfDay}}</dd>
-    <dd *ngIf="complete">{{duration}} min complete</dd>
-    <dd *ngIf="!complete">{{duration}} min planned</dd>
+    <dd>{{timeOfDay}}, {{duration}}</dd>
 </dl>
 <button *ngIf="complete"
     >
