Fix start screen

--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -79,8 +79,7 @@ dl {
         font-size: 1.25em;
         font-weight: bold;
         text-align: center;
-
-        margin: 0.5em 0em;
+        padding: 0.5em 0em;
     }
 
     > header,
