--- a/client/src/theme/logo.scss
+++ b/client/src/theme/logo.scss
@@ -7,7 +7,7 @@
     width: 300px;
     height: 55px;
     overflow: hidden;
-    margin: 100px auto;
+    margin: 2em auto;
     &:after {
         content: ' ';
         mask: url('../assets/heartsteps-logo.svg') no-repeat 0px 0px;
