--- a/client/src/theme/start-screen.scss
+++ b/client/src/theme/start-screen.scss
@@ -11,14 +11,23 @@
     flex-direction: column;
 
     > * {
+        display: block;
         margin: 2em 1em;
+        flex-grow: 1;
+    }
+
+    > button {
+        flex-grow: 0;
     }
 
     .headline {
-        margin: 0.5em auto;
         color: $color-white;
         font-size: 1.5em;
         font-weight: normal;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
     h1 {
@@ -37,14 +46,11 @@
         border-color: $color-white;
         color: $color-white;
         background-color: transparent;
+        width: auto;
     }
 
     a {
         color: $color-white;
-    }
-
-    .controls {
-        flex-grow: 1;
     }
 
     article {
