Change stepper css

--- a/client/src/infrastructure/components/stepper.component.html
+++ b/client/src/infrastructure/components/stepper.component.html
@@ -17,6 +17,6 @@
         {{i}}
     </span>
 </div>
-<ion-content>
+<div class="stepper-content">
     <div #container></div>
-</ion-content>
+</div>
