--- a/client/src/infrastructure/components/stepper.component.scss
+++ b/client/src/infrastructure/components/stepper.component.scss
@@ -28,4 +28,22 @@ heartsteps-stepper {
             background-color: $color-primary;
         }
     }
+
+    > .stepper-content {
+        @extend .heartsteps-container;
+        flex: 1 1 auto;
+
+        overflow: auto;
+        -webkit-overflow-scrolling: touch;
+
+        > * {
+            @extend .heartsteps-container;
+            flex: 1 0 auto;
+            margin: 2em 1em;
+        }
+
+        > *:first-child {
+            display:none;
+        }
+    }
 }
