--- a/client/src/theme/start-screen.scss
+++ b/client/src/theme/start-screen.scss
@@ -26,6 +26,7 @@
         font-weight: normal;
 
         display: flex;
+        flex: 1 1 auto;
         flex-direction: column;
         justify-content: center;
     }
@@ -77,7 +78,9 @@
 }
 
 .start-screen heartsteps-stepper {
+    display: flex;
     background-color: transparent;
+    margin: 0em;
 
     .pagination-bullets > * {
         background-color: transparent;
