--- a/client/src/theme/layout.scss
+++ b/client/src/theme/layout.scss
@@ -81,7 +81,9 @@ footer,
     display: block;
     position: relative;
 
-    h2 {
+    h1, h2, h3, h4, h5 {
+        font-weight: bold;
+        font-size: 1em;
         text-align: center;
     }
 
