--- a/client/src/pages/activity-plan/day-plan.component.html
+++ b/client/src/pages/activity-plan/day-plan.component.html
@@ -1,11 +1,16 @@
-<ul *ngIf="plans.length">
-    <li *ngFor="let plan of plans">
-        <heartsteps-activity-plan [plan]="plan"></heartsteps-activity-plan>
-    </li>
-</ul>
-<p *ngIf="!plans.length">Nothing planned.</p>
-<button *ngIf="canAddActivity"
-    (click)="createPlan()"
-    >
-    Add an activity
-</button>
+<article>
+    <header>
+        <h3>{{title}}</h3>
+        <button *ngIf="canAddActivity"
+            (click)="createPlan()"
+            >
+            Add an activity
+        </button>
+    </header>
+    <ul *ngIf="plans.length">
+        <li *ngFor="let plan of plans">
+            <heartsteps-activity-plan [plan]="plan"></heartsteps-activity-plan>
+        </li>
+    </ul>
+    <p *ngIf="!plans.length">Nothing planned.</p>
+</article>
