--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -104,6 +104,16 @@ article {
     padding: 1em;
 }
 
+article > header {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+
+    h2, h3, h4 {
+        flex-grow: 1;
+    }
+}
+
 .article-title,
 article header .title {
     font-size: 1em;
@@ -114,7 +124,10 @@ article header .title {
 
 article > h2,
 article > h3,
-article > h4 {
+article > h4,
+article > header > h2,
+article > header > h3,
+article > header > h4 {
     @extend .article-title;
 }
 
