Add width setting to contain text

--- a/client/src/infrastructure/components/stepper.component.scss
+++ b/client/src/infrastructure/components/stepper.component.scss
@@ -2,7 +2,7 @@ heartsteps-stepper {
     @extend .heartsteps-container;
     @extend .heartsteps-page;
 
-    background-color: $color-white;
+    width: 100%;
 
     > header {
         @extend .heartsteps-page-header;
