--- a/client/src/pages/activity-plan/day-plan.component.html
+++ b/client/src/pages/activity-plan/day-plan.component.html
@@ -3,6 +3,7 @@
         <h3>{{title}}</h3>
         <button *ngIf="canAddActivity"
             (click)="createPlan()"
+            class="add"
             >
             Add an activity
         </button>
