Move activity log minutes to right

--- a/client/src/heartsteps/activity-logs/activity-log.component.html
+++ b/client/src/heartsteps/activity-logs/activity-log.component.html
@@ -1,5 +1,5 @@
 <dl>
     <dd>{{type}}, {{activityLevel}}</dd>
     <dd>{{start}} - {{end}}</dd>
-    <dd>{{earnedMinutes}} min earned</dd>
 </dl>
+<p class="earned">{{earnedMinutes}}<span>min</span></p>
