--- a/client/src/pages/activity-plan/day-plan.component.scss
+++ b/client/src/pages/activity-plan/day-plan.component.scss
@@ -1,3 +1,25 @@
 activity-plan-day {
 
+    button.add {
+        display: block;
+        position: relative;
+        height: 1em;
+        width: 1em;
+        padding: 0px;
+        text-indent: -3000em;
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            width: 100%;
+            height: 100%;
+            background-color: $color-primary;
+            mask-image: url('../assets/icon-add.svg');
+            mask-position: center center;
+            mask-size: 150%;
+        }
+    }
+
 }
