--- a/client/src/heartsteps/activity-logs/activity-log.component.scss
+++ b/client/src/heartsteps/activity-logs/activity-log.component.scss
@@ -8,13 +8,25 @@ heartsteps-activity-log {
 
     .earned {
         flex-grow: 0;
-        color: $color-primary;
         text-align: center;
         margin: 0em 0.5em;
         span {
-            display: block;
-            color: $text-color;
-            font-weight: normal;
+            @extend .label;
         }
+    }
+
+    &:after {
+        content: '';
+        display: block;
+        flex: 0 0 auto;
+        order: 10;
+        height: 2em;
+        width: 2em;
+        mask-image: url('../assets/edit.svg');
+        mask-repeat: no-repeat;
+        mask-position: 50% 50%;
+        mask-size: 1em;
+        background-color: $link-color;
+        margin-left: 1em;
     }
 }
