--- a/client/src/pages/activity-plan/plan.component.html
+++ b/client/src/pages/activity-plan/plan.component.html
@@ -2,11 +2,4 @@
     <dd>{{activityType}}, {{activityLevel}}</dd>
     <dd>{{timeOfDay}}, {{duration}}</dd>
 </dl>
-<button *ngIf="complete"
-    >
-    Mark Incomplete
-</button>
-<button *ngIf="!complete"
-    >
-    Complete plan
-</button>
+<button>Edit plan</button>
